# drfw

./: .gitignore  CLAUDE.md  Cargo.toml  DEPTH_HIERARCHY.md  FUTURE_PLAN.md  README.md  STATUS.md  STYLE.md  build.rs  optional_enhance.md  org.drfw.policy
.github/workflows/: ci.yml
contrib/: 50-drfw.rules  PKGBUILD  README.md  drfw.desktop  drfw.service  style.md
contrib/icons/: README.md
docs/archive/: PLAN_DRFW.md
examples/: stress_gen.rs
proptest-regressions/: validators.txt
src/: audit.rs  command.rs  config.rs  elevation.rs  fonts.rs  lib.rs  main.rs  utils.rs  validators.rs
src/app/: forms.rs  mod.rs  syntax_cache.rs  ui_components.rs  ui_components_new.rs  view.rs  view.rs.bak
src/app/handlers/: apply.rs  export.rs  mod.rs  profiles.rs  rules.rs  settings.rs  test_utils.rs  ui_state.rs
src/app/helpers/: caching.rs  filtering.rs  formatting.rs  mod.rs
src/app/view/: confirmation.rs  diagnostics.rs  helper_modals.rs  mod.rs  modals.rs  pickers.rs  profile.rs  rule_form.rs  settings.rs  shortcuts.rs  sidebar.rs  syntax.rs  workspace.rs
src/core/: error.rs  firewall.rs  mod.rs  nft_json.rs  profiles.rs  rule_constraints.rs  test_helpers.rs  tests.rs  verify.rs
src/theme/: custom.rs  mod.rs  presets.rs
tests/: integration_tests.rs  mock_nft.sh
tools/: stress_gen.rs
