[package]
name = "drfw"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# UI view functions and parsers are naturally large - breaking them up reduces readability
too_many_lines = "allow"

# State management structs with many boolean flags are idiomatic for GUI applications
struct_excessive_bools = "allow"

# Linux filesystems are case-sensitive, we intentionally check lowercase .json
case_sensitive_file_extension_comparisons = "allow"

# Theme matching: same arms are intentional for clarity
match_same_arms = "allow"

# Theme creation requires many color parameters - this is unavoidable
too_many_arguments = "allow"

# Test-specific lints (used in test modules for color comparisons and test data generation)
float_cmp = "allow"
uninlined_format_args = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

[dependencies]
# GUI Framework
iced = { version = "0.14", features = ["tokio"] }
notify-rust = "4"

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }

# Core Logic
ipnetwork = { version = "0.21", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }

# UI Helpers
similar = "2"

# Error Handling & Logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Security
sha2 = "0.10"
fontdb = "0.21"
clap = { version = "4.5.53", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs", "term", "user"] }

[dev-dependencies]
proptest = "1"
