[package]
name = "drfw"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# UI view functions and parsers are naturally large - breaking them up reduces readability
too_many_lines = "allow"

# State management structs with many boolean flags are idiomatic for GUI applications
struct_excessive_bools = "allow"

# Linux filesystems are case-sensitive, we intentionally check lowercase .json
case_sensitive_file_extension_comparisons = "allow"

# Theme matching: same arms are intentional for clarity
match_same_arms = "allow"

# Theme creation requires many color parameters - this is unavoidable
too_many_arguments = "allow"

# Test-specific: float comparisons in tests for color validation
float_cmp = "allow"

[dependencies]
# ═══════════════════════════════════════════════════════════════════════════
# GUI Framework
# ═══════════════════════════════════════════════════════════════════════════
iced = { version = "0.14", features = ["tokio"] }  # Core GUI framework with async support

# ═══════════════════════════════════════════════════════════════════════════
# Async Runtime
# ═══════════════════════════════════════════════════════════════════════════
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }
# Required by iced, used for:
# - Async file I/O (atomic config writes)
# - Process spawning (nft/pkexec elevation)
# - Task execution in GUI context

# ═══════════════════════════════════════════════════════════════════════════
# Core Firewall Logic
# ═══════════════════════════════════════════════════════════════════════════
ipnetwork = { version = "0.21", features = ["serde"] }  # IP/CIDR parsing and validation for rules
uuid = { version = "1", features = ["v4", "serde"] }  # Unique rule IDs for command tracking
serde = { version = "1", features = ["derive"] }  # Serialization framework
serde_json = "1"  # Config files, profiles, nftables JSON generation
tempfile = "3"  # Atomic write pattern for security (temp → rename)
directories = "6"  # XDG Base Directory spec compliance
chrono = { version = "0.4", features = ["serde"] }  # Rule creation timestamps

# ═══════════════════════════════════════════════════════════════════════════
# UI Helpers
# ═══════════════════════════════════════════════════════════════════════════
similar = "2"  # Diff algorithm for ruleset comparison (show changes)
rfd = "0.15"  # Native OS file dialogs (save/export)
network-interface = "2.0"  # Cross-platform network interface discovery
logos = "0.14"  # Declarative lexer generator (compile-time DFA)
strum = { version = "0.26", features = ["derive"] }  # Enum boilerplate elimination (Display, iter, etc.)
nucleo-matcher = "0.3"  # Fuzzy search for font and theme pickers

# ═══════════════════════════════════════════════════════════════════════════
# Error Handling & Logging
# ═══════════════════════════════════════════════════════════════════════════
thiserror = "2"  # Structured error types with user-friendly messages
tracing = "0.1"  # Structured logging framework
tracing-subscriber = "0.3"  # Logging configuration and output formatting

# ═══════════════════════════════════════════════════════════════════════════
# Security & System Integration
# ═══════════════════════════════════════════════════════════════════════════
sha2 = "0.10"  # Snapshot checksums for integrity verification
fontdb = "0.21"  # System font enumeration for font picker
clap = { version = "4.5.53", features = ["derive"] }  # CLI argument parsing
nix = { version = "0.30.1", features = ["fs", "term", "user"] }  # Safe Unix syscalls (getuid, isatty)
crossterm = "0.28"  # Terminal control for CLI countdown timers

[dev-dependencies]
proptest = "1"
